--- a/src/app/src/main/res/layout/content.xml
+++ b/src/app/src/main/res/layout/content.xml
@@ -12,138 +12,118 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#fff"
-
         android:layout_margin="10dp"
         >
-
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/inner_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="10dp"
+            android:background="#fff"
+            android:layout_margin="5dp"
             >
-
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/icon_image"
-                    android:layout_width="45px"
-                    android:layout_height="45px"
-                    android:src="@mipmap/ic_launcher"
-                    android:scaleType="centerCrop"
-                    />
-
-                <TextView
-                    android:id="@+id/event_mood"
-                    android:layout_marginLeft="16dp"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="The Mood"
-                    android:textSize="14dp"
-                    android:textStyle="bold|italic"
-                    android:layout_gravity="center"
-                    />
-
-                <TextView
-                    android:id="@+id/event_date"
-                    android:layout_weight="0.6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="2 day ago"
-                    android:textSize="14dp"
-                    android:layout_gravity="center"
-                    />
-
-                <TextView
-                    android:id="@+id/more"
-                    android:visibility="invisible"
-                    android:layout_width="15dp"
-                    android:layout_height="22dp"
-                    android:layout_gravity="center"
-                    />
-            </LinearLayout>
-
-
-
-
-
-            <LinearLayout
-                android:layout_marginTop="12dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                >
 
                 <LinearLayout
-                    android:layout_weight="1"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    >
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/reason"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textSize="17dp"
-                        android:lineSpacingExtra="3dp"
-                        />
-
-                    <TextView
-                        android:id="@+id/social_situation"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:textSize="13dp"
-                        />
-
-
-                    <Button
-                        android:focusable="false"
-                        android:id="@+id/delete_item"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/username"
                         android:layout_weight="1"
-                        android:backgroundTint="@color/colorAction"
-                        android:text="Delete" />
-
-
-
-
-
-
-
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_weight="2.2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-
-                    <ImageView
-
-                        android:id="@+id/me_photo"
-                        android:visibility="gone"
-                        android:layout_width="200px"
-                        android:layout_height="200px"
-                        android:src="@mipmap/ic_launcher"
-                        android:scaleType="fitXY"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Username"
+                        android:textSize="14dp"
+                        android:textStyle="bold|italic"
+                        android:layout_gravity="center"
+                        />
+                    <TextView
+                        android:id="@+id/event_date"
+                        android:layout_weight="0.6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:text="2 day ago"
+                        android:textSize="14dp"
+                        android:layout_gravity="center"
                         />
 
+                    <TextView
+                        android:id="@+id/more"
+                        android:visibility="invisible"
+                        android:layout_width="15dp"
+                        android:layout_height="22dp"
+                        android:layout_gravity="center"
+                        />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
+                    <!--                <ImageView-->
+                    <!--                    android:id="@+id/icon_image"-->
+                    <!--                    android:layout_width="85dp"-->
+                    <!--                    android:layout_height="80dp"-->
+                    <!--                    android:contentDescription="emoji"-->
+                    <!--                    app:layout_constraintHorizontal_bias="0.0"-->
+                    <!--                    android:scaleType="fitXY"-->
+                    <!--                    card_view:layout_editor_absoluteY="0dp">-->
+                    <!--                </ImageView>-->
 
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/icon_image"
+                        android:layout_width="85dp"
+                        android:layout_height="85dp"
+                        app:civ_border_width="2dp"
+                        app:civ_border_color="#FF000000"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/reason"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:padding="10dp"
+                            android:text="Reason"
+                            android:textAlignment="center"
+                            android:textSize="18sp"
+                            android:textStyle="bold"></TextView>
+
+                        <TextView
+                            android:id="@+id/social_situation"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:padding="10dp"
+                            android:text="Social Situation"
+                            android:textStyle="bold"
+                            android:textAlignment="center"
+                            android:textSize="18sp">
+                        </TextView>
+                    </LinearLayout>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/me_photo"
+                        android:layout_width="85dp"
+                        android:layout_height="85dp"
+                        app:civ_border_width="2dp"
+                        app:civ_border_color="#FF000000">
+                    </de.hdodenhof.circleimageview.CircleImageView>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
     </com.google.android.material.card.MaterialCardView>
 </RelativeLayout>
