--- a/src/app/src/main/res/layout/fragment_mood_event.xml
+++ b/src/app/src/main/res/layout/fragment_mood_event.xml
@@ -178,7 +178,7 @@
                         android:layout_marginTop="14dp"
                         android:layout_marginEnd="10dp"
                         android:background="@drawable/button"
-                        android:backgroundTint="@color/colorAccent"
+                        android:backgroundTint="@color/lightred"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
                         android:text="@string/delete"
