--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorWhite">#ffffff</color>
     <color name="offWhite">#f9f9f9</color>
     <color name="lightGrey">#D3D3D3</color>
+    <color name="lightred">#d73232</color>
 
     <color name="colorPrimaryDark">#0C100F</color>
 <!--    <color name="colorAccent">#D81B60</color>-->
