--- a/src/app/src/main/res/layout/content.xml
+++ b/src/app/src/main/res/layout/content.xml
@@ -79,12 +79,9 @@
                     <!--                </ImageView>-->
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/icon_image"
                         android:layout_width="85dp"
-                        android:layout_height="85dp"
-                        app:civ_border_width="2dp"
-                        app:civ_border_color="#FF000000"/>
+                        android:layout_height="85dp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
