--- a/src/app/src/main/res/layout/activity_feed.xml
+++ b/src/app/src/main/res/layout/activity_feed.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
         android:id="@+id/toolbar"
@@ -14,16 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-
-    <ListView
-        android:id="@+id/list_user_following2"
-        android:layout_width="fill_parent"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/pullToRefresh"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintBottom_toTopOf="@id/bottomBar">
+        <ListView
+            android:id="@+id/list_user_following2"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/pullToRefresh"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
 
-    </ListView>
+        </ListView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <!--</LinearLayout>-->
 
@@ -49,4 +54,5 @@
         android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 
