--- a/src/app/src/main/res/layout/fragment_profile_view.xml
+++ b/src/app/src/main/res/layout/fragment_profile_view.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/top_container"
         android:orientation="vertical"
-        android:background="@color/colorAccentDark">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/userNameFragmentProfile"
@@ -51,42 +51,51 @@
         android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@id/top_container"
         >
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/UnfollowButton"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
             android:layout_height="45dp"
+            android:layout_margin="10dp"
             android:gravity="center"
             android:text="Unfollow"
             android:textColor="@color/colorPrimary"
             android:visibility="invisible"
-            app:strokeColor="@color/colorPrimary" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/colorPrimary"
+            tools:layout_editor_absoluteX="10dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/editFAB"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
             android:layout_height="45dp"
+            android:layout_margin="10dp"
             android:gravity="center"
             android:text="Edit Profile"
             android:textColor="@color/colorPrimary"
             android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:strokeColor="@color/colorPrimary"
-            tools:layout_editor_absoluteX="128dp"
-            tools:layout_editor_absoluteY="5dp" />
+            tools:layout_editor_absoluteX="10dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/FollowButton"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
             android:layout_height="45dp"
+            android:layout_margin="10dp"
             android:backgroundTint="@color/fui_bgTwitter"
+            android:gravity="center"
             android:text="Follow"
             android:textColor="@color/colorWhite"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="10dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
