--- a/src/app/src/main/res/layout/activity_feed.xml
+++ b/src/app/src/main/res/layout/activity_feed.xml
@@ -52,9 +52,9 @@
     <FrameLayout
         android:id="@+id/mood_event_frag_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@id/bottomBar"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
