--- a/src/app/src/main/res/layout/activity_map.xml
+++ b/src/app/src/main/res/layout/activity_map.xml
@@ -33,6 +33,7 @@
             android:text="Personal"
             android:padding="10dp"
             android:paddingRight="10dp"
+            android:visibility="gone"
             />
 
         <Button
@@ -43,7 +44,8 @@
             android:text="Friends"
             android:padding="10dp"
             android:paddingRight="10dp"
-            android:stateListAnimator="@null"/>
+            android:stateListAnimator="@null"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/all_button"
@@ -53,7 +55,8 @@
             android:text="All"
             android:padding="10dp"
             android:paddingRight="10dp"
-            android:stateListAnimator="@null"/>
+            android:stateListAnimator="@null"
+            android:visibility="gone"/>
     </LinearLayout>
 
     </FrameLayout>
