--- a/src/app/src/main/res/layout/content.xml
+++ b/src/app/src/main/res/layout/content.xml
@@ -35,90 +35,92 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/username"
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Username"
-                        android:textSize="14dp"
-                        android:textStyle="bold|italic"
-                        android:layout_gravity="center"
-                        />
-                    <TextView
-                        android:id="@+id/event_date"
-                        android:layout_weight="0.6"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:text="2 day ago"
-                        android:textSize="14dp"
-                        android:layout_gravity="center"
-                        />
-
-                    <TextView
-                        android:id="@+id/more"
-                        android:visibility="invisible"
-                        android:layout_width="15dp"
-                        android:layout_height="22dp"
-                        android:layout_gravity="center"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <!--                <ImageView-->
-                    <!--                    android:id="@+id/icon_image"-->
-                    <!--                    android:layout_width="85dp"-->
-                    <!--                    android:layout_height="80dp"-->
-                    <!--                    android:contentDescription="emoji"-->
-                    <!--                    app:layout_constraintHorizontal_bias="0.0"-->
-                    <!--                    android:scaleType="fitXY"-->
-                    <!--                    card_view:layout_editor_absoluteY="0dp">-->
-                    <!--                </ImageView>-->
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/icon_image"
-                        android:layout_width="85dp"
-                        android:layout_height="85dp" />
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:paddingRight="10dp"/>
+
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="307dp"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="1">
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/username"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="top|right"
+                                android:layout_weight="1"
+                                android:fontFamily="monospace"
+                                android:text="Username"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="18dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/event_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="top|center"
+                                android:layout_weight="1"
+                                android:gravity="start"
+                                android:text="2 day ago"
+                                android:textSize="13dp" />
+
+                            <TextView
+                                android:id="@+id/social_situation"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Social Situation"
+                                android:textAlignment="viewEnd"
+                                android:textSize="13sp"
+                                android:textStyle="normal" />
+                        </LinearLayout>
+
 
                         <TextView
                             android:id="@+id/reason"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:padding="10dp"
+                            android:fontFamily="sans-serif-condensed-dark"
                             android:text="Reason"
-                            android:textAlignment="center"
-                            android:textSize="18sp"
-                            android:textStyle="bold"/>
+                            android:paddingBottom="10dp"
+                            android:textColor="@color/colorPrimary"
+                            android:textAlignment="viewStart"
+                            android:textSize="14sp"
+                            android:textStyle="normal" />
 
-                        <TextView
-                            android:id="@+id/social_situation"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_weight="1"
-                            android:padding="10dp"
-                            android:text="Social Situation"
-                            android:textStyle="bold"
-                            android:textAlignment="center"
-                            android:textSize="18sp">
-                        </TextView>
+                        <ImageView
+                            android:id="@+id/me_photo"
+                            android:layout_width="300dp"
+                            android:layout_height="120dp"
+                            android:src="@drawable/white"
+                            android:scaleType="centerCrop"
+                            android:background="@drawable/round">
+                        </ImageView>
+
                     </LinearLayout>
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/me_photo"
-                        android:layout_width="85dp"
-                        android:layout_height="85dp"
-                        android:src="@drawable/white"
-                        >
-                    </de.hdodenhof.circleimageview.CircleImageView>
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+
                 </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
