--- a/src/app/src/main/res/layout/activity_profile_view.xml
+++ b/src/app/src/main/res/layout/activity_profile_view.xml
@@ -236,17 +236,16 @@
     </FrameLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/profile_container"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        >
+        app:layout_constraintBottom_toTopOf="@id/bottomBar">
 
         <ListView
             android:id="@+id/mood_history"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_height="match_parent"
             android:layout_marginBottom="3dp" />
 
     </RelativeLayout>
